Added POST/merge-trees
